www/css/layers.css
#dialog-file-chooser-content{
  margin-top: 2vh;
  max-height: 70vh;
  max-width: 60vh;
  overflow: scroll;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

#dialog-comparison-KML-content{
    margin-top: 2vh;
    max-height: 70vh;
    overflow: scroll;
    margin-left: 2vh;
    margin-right: 2vh;
    margin-bottom: 1vh;
}

#dialog-comparison-KML-content p{
    font-size: 12px;
}

.left_property{
    width: 50%;
    word-break: break-all;
}

.layers-more-button{
    position: absolute;
    left: 87%;
    bottom: 14%;
    color: black;
}

.layer-label{
    display: inline-block;
    width: 75%;
    position: absolute;
    top: 31%;
    left: 8%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.block-icon{
    position: absolute;
    left: 83%;
    top: 31%;

}

#path-chooser-KML{
    max-height: 70vh;
    max-width: 60vh;
    overflow: scroll;
    font-size: 12px;
    padding-top: 1vh;
    padding-bottom: 0.3vh;
}


.list-item--material__center{
    padding-right: 4vw;
}

#buttonFileChooser{
    margin-right: 1vw;
    margin-bottom: 0.3vh;
}

